# src/modules/domain/entities/order.ts
@@ -8,6 +8,7 @@ export interface IOrder {
 	id_chef: number | null;
 	id_restaurante: number;
 	codigo_verificacion: string | null;
+	tiempo_pedido: number | null;
 }
 
 export interface IOrderCreate extends Omit<IOrder, 'id'> {}
@@ -21,3 +22,18 @@ export interface IOrderRequest {
 }
 
 export interface IUpdateOrder extends Partial<IOrderCreate> {}
+
+export interface ITimeTakenPerOrder {
+	id_pedido: number;
+	tiempo_pedido_segundos: number;
+}
+export interface ITotalTimePerEmployee {
+	id_chef: number;
+	total_time: number;
+	total_orders: number;
+}
+
+export interface IAverageTimePerEmployee {
+	id_chef: number;
+	tiempo_promedio_segundos: number;
+}
