# src/modules/infrastructure/orm/repository/orderPostgresql.repository.ts
@@ -1,6 +1,12 @@
 import { Op, Sequelize, WhereOptions } from 'sequelize';
 import { IOrderRepository } from '../../../domain/repositories/order.repository';
-import { IOrder, IOrderCreate, IUpdateOrder } from '../../../domain/entities/order';
+import {
+	IOrder,
+	IOrderCreate,
+	ITimeTakenPerOrder,
+	ITotalTimePerEmployee,
+	IUpdateOrder,
+} from '../../../domain/entities/order';
 import { ORDER_POSTGRESQL_TABLE } from '../models/OrderPostgresql.model';
 import { SequelizePostgresqlConnection } from '../sequelizePostgresqlConnection';
 import { PreparationStages } from '../../../domain/enums/preparationStages.enum';
@@ -74,5 +80,37 @@ export class OrderPostgresqlRepository implements IOrderRepository {
 		}
 
 		return null;
+	}
+
+	async getTimeTakenPerOrder(restaurantId: number): Promise<ITimeTakenPerOrder[]> {
+		const orders = await this.sequelize.models[ORDER_POSTGRESQL_TABLE].findAll({
+			where: { id_restaurante: restaurantId, estado: PreparationStages.DELIVERED },
+			attributes: [
+				['id', 'id_pedido'],
+				['tiempo_pedido', 'tiempo_pedido_segundos'],
+			],
+		});
+
+		return orders.map((order) => order.toJSON()) as ITimeTakenPerOrder[];
+	}
+
+	async getTotalTimePerEmployee(restaurantId: number, employeeIds: number[]) {
+		const response = await this.sequelize.models[ORDER_POSTGRESQL_TABLE].findAll({
+			where: {
+				id_restaurante: restaurantId,
+				id_chef: {
+					[Op.in]: employeeIds, // employeeIds es un array de los employeeId deseados
+				},
+				estado: PreparationStages.DELIVERED,
+			},
+			attributes: [
+				'id_chef',
+				[this.sequelize.fn('sum', this.sequelize.col('tiempo_pedido')), 'total_time'],
+				[this.sequelize.fn('count', this.sequelize.col('tiempo_pedido')), 'total_orders'],
+			],
+			group: ['id_chef'],
+		});
+
+		return response.map((order) => order.toJSON() as ITotalTimePerEmployee);
 	}
 }
